--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root{
+    --pink:#e84393;
+}
 *{
     margin:0; padding:0;
     box-sizing: border-box;
@@ -6,4 +9,14 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
+}
+html{
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 6rem;
+    overflow-x: hidden;
+}
+
+section{
+    padding:2rem 9%;
 }
