--- a/style.css
+++ b/style.css
@@ -34,6 +34,20 @@ section{
 .heading span{
     color:var(--pink);
 }
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    border-radius: 5rem;
+    background:#333;
+    color:#fff;
+    padding:.9rem 3.5rem;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn:hover{
+    background:var(--pink);
+}
 
 /*header section starts*/
 header{
