--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ header .fa-bars{
     display: none;
 }
 /*header section ends*/
-
 /*home section starts*/
 .home{
     display: flex;
@@ -140,6 +139,7 @@ header .fa-bars{
     line-height: 1.5;
 }
 /*home section ends*/
+/*About section starts*/
 .about .row{
     display: flex;
     align-items: center;
@@ -190,3 +190,40 @@ header .fa-bars{
     padding-top: 1rem;
     line-height: 1.5;
 }
+/*About section ends*/
+/*Icons section starts*/
+
+.icons-container{
+    background:#eee;
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.icons-container .icons{
+    background:#fff;
+    border:.1rem solid rgba(0,0,0,.1);
+    padding:2rem;
+    display: flex;
+    align-items: center;
+    flex:1 1 25rem;
+}
+
+.icons-container .icons img{
+    height:5rem;
+    margin-right: 2rem;
+}
+
+.icons-container .icons h3{
+    color:#333;
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
+
+.icons-container .icons span{
+    color:#555;
+    font-size: 1.3rem;
+}
+/*Icons section ends*/
